[gd_scene load_steps=9 format=3 uid="uid://chpt5y51bsn33"]

[ext_resource type="Script" path="res://main_scene/main_scene.gd" id="1_8muud"]
[ext_resource type="PackedScene" uid="uid://c3wioa245o02j" path="res://card_create_component/base_card_panel.tscn" id="3_ephvu"]
[ext_resource type="Script" path="res://resourse/color_pattern_resource/color_pattern_group.gd" id="3_jerku"]
[ext_resource type="PackedScene" uid="uid://dvsx784flvfdj" path="res://card_create_component/control_card_component/control_card_instance/control_card_panel_2_1.tscn" id="4_8rbra"]
[ext_resource type="Script" path="res://resourse/color_pattern_resource/color_pattern.gd" id="4_kqq0m"]
[ext_resource type="Script" path="res://card_create_component/card_move_manager_test_1.gd" id="4_pvxuy"]

[sub_resource type="Resource" id="Resource_l4hrk"]
script = ExtResource("4_kqq0m")
name = "便签纸_1"
backgroud_color_array = Array[Color]([Color(0.811765, 0.811765, 0.811765, 1), Color(0.580392, 0.423529, 0.913725, 1), Color(0.996078, 0.647059, 0.576471, 1), Color(0.996078, 0.945098, 0.294118, 1), Color(0.572549, 0.713726, 0.807843, 1), Color(0.541176, 0.709804, 0.603922, 1), Color(0.917647, 0.596078, 0.996078, 1), Color(1, 0.262745, 0.258824, 1)])
text_color_array = Array[Color]([Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1)])
re_backgroud_color_array = Array[Color]([Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1), Color(0.0901961, 0.0901961, 0.0823529, 1)])
re_text_color_array = Array[Color]([Color(0.811765, 0.811765, 0.811765, 1), Color(0.580392, 0.423529, 0.913725, 1), Color(0.996078, 0.647059, 0.576471, 1), Color(0.996078, 0.945098, 0.294118, 1), Color(0.572549, 0.713726, 0.807843, 1), Color(0.541176, 0.709804, 0.603922, 1), Color(0.917647, 0.596078, 0.996078, 1), Color(1, 0.262745, 0.258824, 1)])

[sub_resource type="Resource" id="Resource_kods2"]
script = ExtResource("4_kqq0m")
name = "中饱和双色_1"
backgroud_color_array = Array[Color]([Color(0.619608, 0.85098, 0.901961, 1), Color(0.0156863, 0.258824, 0.247059, 1), Color(0.0392157, 0.541176, 0.654902, 1), Color(0.129412, 0.0313726, 0.254902, 1), Color(0.690196, 0.815686, 0.529412, 1), Color(0.898039, 0.188235, 0.309804, 1), Color(0.270588, 0.054902, 0.211765, 1)])
text_color_array = Array[Color]([Color(0.839216, 0.2, 0.592157, 1), Color(0.6, 0.894118, 0.313726, 1), Color(0.862745, 0.862745, 0.027451, 1), Color(0.839216, 0.2, 0.592157, 1), Color(0.52549, 0.321569, 0.560784, 1), Color(0.823529, 0.572549, 0.788235, 1), Color(0.329412, 0.670588, 0.658824, 1)])
re_backgroud_color_array = Array[Color]([Color(0.839216, 0.2, 0.592157, 1), Color(0.6, 0.894118, 0.313726, 1), Color(0.862745, 0.862745, 0.027451, 1), Color(0.839216, 0.2, 0.592157, 1), Color(0.52549, 0.321569, 0.560784, 1), Color(0.823529, 0.572549, 0.788235, 1), Color(0.329412, 0.670588, 0.658824, 1)])
re_text_color_array = Array[Color]([Color(0.619608, 0.85098, 0.901961, 1), Color(0.0156863, 0.258824, 0.247059, 1), Color(0.0392157, 0.541176, 0.654902, 1), Color(0.129412, 0.0313726, 0.254902, 1), Color(0.690196, 0.815686, 0.529412, 1), Color(0.898039, 0.188235, 0.309804, 1), Color(0.270588, 0.054902, 0.211765, 1)])

[node name="main_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8muud")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 924.0
offset_top = 592.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9
script = ExtResource("4_pvxuy")

[node name="BaseCardContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = -100

[node name="BaseCardPanel" parent="BaseCardContainer" instance=ExtResource("3_ephvu")]
layout_mode = 2

[node name="ControlCardPanel" parent="BaseCardContainer" instance=ExtResource("4_8rbra")]
layout_mode = 2

[node name="UpperContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.965482
anchor_top = 0.952778
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.279907
offset_top = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 483.0
offset_right = 365.0
offset_bottom = 522.0

[node name="ColorPatternManager" type="Node" parent="."]
script = ExtResource("3_jerku")
color_pattern_group = Array[ExtResource("4_kqq0m")]([SubResource("Resource_l4hrk"), SubResource("Resource_kods2")])

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
